[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player_Ship_Default.png" type="Texture" id=1]
[ext_resource path="res://Player/Ship_Exhaust_2.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Player/Ship_Exhaust_3.png" type="Texture" id=4]
[ext_resource path="res://Player/Player_Ship_Damaged.png" type="Texture" id=5]
[ext_resource path="res://Player/Ship_Exhaust_1.png" type="Texture" id=6]
[ext_resource path="res://Player/Player Shooting.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "flying",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "damaged",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 58.7188
height = 119.461

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 240.9, 157.252 )

[sub_resource type="Animation" id=6]
resource_name = "EvadeFadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ShipSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExhaustSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "EvadeFadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ShipSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExhaustSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="ExhaustSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "flying"
frame = 3
playing = true

[node name="ShipSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "flying"

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 25.4846 )
shape = SubResource( 3 )

[node name="Sprite Boundaries" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.68182 )
shape = SubResource( 4 )

[node name="LeftCannon" type="Position2D" parent="."]
position = Vector2( -184.999, -105.492 )

[node name="RightCannon" type="Position2D" parent="."]
position = Vector2( 185.819, -106.768 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerShotTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FireRateCooldownTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="EvadeCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PlayerShootingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EvadeFadeIn = SubResource( 6 )
anims/EvadeFadeOut = SubResource( 5 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="PlayerShotTimer" to="." method="_on_PlayerShotTimer_timeout"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
[connection signal="timeout" from="FireRateCooldownTimer" to="." method="_on_FireRateCooldownTimer_timeout"]
[connection signal="timeout" from="EvadeCooldownTimer" to="." method="_on_EvadeCooldownTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
